--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<img src="images/kalpesh.png" alt=" " class="img-responsive" />
 										<div class="wthree_tab_content_pos1">
 											<ul>
-												<li><a href="#" class="facebook"></a></li>
-												<li><a href="#" class="twitter"></a></li>
-												<li><a href="#" class="g"></a></li>
+												<li><a href="https://www.facebook.com/kalpeshkikani8" class="facebook"></a></li>
+												<li><a href="#" class="linkedin"></a></li>
+												<li><a href="https://plus.google.com/u/0/111802651003254406255" class="g"></a></li>
 											</ul>
 										</div>
 										<div class="wthree_tab_content_pos">
