--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="wthree_tab_content_pos1">
 											<ul>
 												<li><a href="https://www.facebook.com/kalpeshkikani8" class="facebook"></a></li>
-												<li><a href="#" class="linkedin"></a></li>
+												<li><a href="#" class="twitter"></a></li>
 												<li><a href="https://plus.google.com/u/0/111802651003254406255" class="g"></a></li>
 											</ul>
 										</div>
